# traceable-research-runtime

./: .containerignore  .dockerignore  .env.example  .gitignore  CONTEXT.md  Cargo.toml  Containerfile  LICENSE  README.md  compose.yaml  requirements-search.txt
demo/: index.html  package-lock.json  package.json
demo-host/: Cargo.toml  Containerfile
demo-host/src/: catalog.rs  main.rs  research_service.rs  security.rs  workspace_api.rs
demo/src/: main.ts  research-workspace-client.ts  styles.css
deploy/crawl4ai/: Containerfile  egress-entrypoint.sh  run.sh
docs/: architecture.md  backend-architecture.md  competitive-landscape.md  curated-document-research-architecture.md  database-search-architecture.md  develop.md  validation-poc.md  web-search-architecture.md  web-search-dataflow-example.md  workspace-http-api.md
docs/adr/: 0001-separate-conversation-clarification-and-research-run-language.md  0002-separate-host-catalogue-from-research-audit-storage.md  0003-encrypt-user-model-credentials-with-a-server-key.md  0004-compose-research-answers-from-model-knowledge-and-web-evidence.md  0005-record-auditable-decision-rationales-without-hidden-reasoning.md  0006-model-led-dialogue-and-tiered-trace-disclosure.md  0007-schedule-model-approved-research-outside-dialogue-requests.md  0008-route-google-first-bing-fallback-through-searxng.md  0009-require-complete-v7-trace-replay-before-projection.md  0010-embed-snapshot-extraction-and-keep-search-at-a-seam.md
docs/database/: 0001-demo-catalog.sql  0002-research-turn-answer-style.sql  0003-workspace-idempotency-and-archive-recovery.sql  0004-active-model-profile-names.sql  0005-idempotency-claim-fencing.sql  0006-one-active-turn-per-conversation.sql  0007-idempotency-operation-journal.sql
docs/decisions/: 2026-07-14-backend-core-hardening.md  2026-07-14-model-led-intake-redesign.md  2026-07-15-wsl2-demo-environment.md  2026-07-16-contain-long-answers-and-do-not-cache-workspace-entry.md  2026-07-20-search-api-provider-comparison.md
docs/dev/: backend-first-implementation-plan.md  frontend-demo-product-draft.md
docs/fixtures/: workspace-error.json  workspace-l1-turn.json  workspace-l2-trace-summary.json  workspace-l3-trace-audit.json
docs/history/: README.md
docs/plans/: 2026-07-16-trace-boundary-hardening-plan.md  2026-07-17-frontend-api-and-state-mapping-draft.md  2026-07-17-frontend-low-fidelity-wireframes-draft.md  2026-07-17-frontend-theme-component-system.md  (+5 more)
examples/: fixture_research.rs
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
migrations/: 0001_runtime.sql  0002_markdown_corpus.sql
poc/: run.py
scripts/: server-demo-up.sh  verify-demo-workspace.mjs  wsl-demo-down.sh  wsl-demo-up.sh
src/: adapters.rs  app.rs  backend.rs  brave_search.rs  clarification.rs  conversation.rs  corpus.rs  domain.rs  error.rs  execution_engine.rs  execution_trace.rs  external_adapters.rs  identity.rs  intake.rs  integrity.rs  lib.rs  live_model_gateway.rs  live_research_backend.rs  main.rs  model_adapter.rs  model_gateway.rs  orchestration.rs  research_domain.rs  research_error.rs  research_run.rs  research_trace.rs  runtime.rs  server.rs  snapshot.rs  snapshot_store.rs  storage.rs  trace.rs  types.rs  web.rs  web_search.rs  web_snapshot.rs
tests/: live_e2e.rs
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+79 files in other folders)
