[package]
name = "traceable-markdown-research-runtime"
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
description = "A traceable, replayable research runtime for versioned Markdown corpora"
license = "MIT"

[lib]
name = "traceable_markdown_research_runtime"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["clock", "serde"] }
hex = "0.4.3"
pulldown-cmark = "0.13.4"
reqwest = { version = "0.13.4", default-features = false, features = ["json", "native-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_json_canonicalizer = "0.3.2"
serde_yaml_ng = "0.10.0"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time"] }
uuid = { version = "1.24.0", features = ["serde", "v7"] }

[dev-dependencies]
axum = "0.8"
tempfile = "3.23.0"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = "warn"
