[package]
name = "traceable-search-demo-host"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
aes-gcm = "0.10"
base64 = "0.22"
chrono = "0.4"
password-auth = "1.0"
rand = "0.8"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
time = "0.3"
traceable-search = { path = ".." }
uuid = { version = "1.18", features = ["v4"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.23"
tower = { version = "0.5", features = ["util"] }
